--- a/chamber/styles/headerfooter.css
+++ b/chamber/styles/headerfooter.css
@@ -135,7 +135,7 @@ nav.open .menuLinks_ul li {
 
 /* Active Page */
 .currentPage {
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(0, 0, 0, 0.7);
     border-radius: 5px;
     font-weight: bold;
 }
